doc: all user handlers
